--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "js-framework",
-  "version": "0.1.0",
+  "name": "deno-mods",
+  "version": "0.2.0",
   "private": true,
+  "description": "A List of the Most Popular Open Source Deno Modules.",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3030",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "next": "^9.5.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swr": "^0.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
