--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "deno-mods",
-  "version": "0.2.0",
+  "version": "1.0.1",
   "private": true,
   "description": "A List of the Most Popular Open Source Deno Modules.",
   "keywords": [
     "nextjs",
-    "react"
+    "react",
+    "tailwindcss",
+    "deno"
   ],
   "repository": {
     "type": "git",
@@ -24,8 +26,9 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
-    "@types/react": "^16.9.45",
+    "@types/react": "^16.9.46",
     "autoprefixer": "^9.8.6",
+    "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.6.2",
     "typescript": "^3.9.7"
